Fix center align of btn

--- a/assets/css/preferences-style.css
+++ b/assets/css/preferences-style.css
@@ -137,6 +137,7 @@ i.icon {
 .set-pref-btn {
 	font-size: 20px;
 	width: 200px;
+	margin-left: 480px;
 }
 
 @media only screen and (max-width: 576px) {}
